--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,7 @@
     --vscode-editorGutter-background: #121221 !important;
     --vscode-editor-background: #0d0d1a !important;
 }
+
+button {
+    cursor: pointer !important;
+}
